--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
         <aside class="note-col">
           <div class="note-card">
             <div class="note-title">备注（Chart 4）</div>
-            <!-- 直接在这里编辑文字 -->
-            <textarea id="note4" spellcheck="false" placeholder="这里写 Chart 4 的说明…"></textarea>
+            <textarea id="note4" spellcheck="false">At the beginning, I sent the assignment requirements and the reference images to GPT and asked it to generate the corresponding HTML. However, it kept failing to reproduce the numerical peak values correctly, so I searched the HTML for the places where those values could be edited, found them, and debugged/modified them myself. After five or six rounds of changes, I produced a figure that closely matches the reference.</textarea>
           </div>
         </aside>
       </div>
@@ -126,7 +125,7 @@
         <aside class="note-col">
           <div class="note-card">
             <div class="note-title">备注（Chart 9）</div>
-            <textarea id="note9" spellcheck="false" placeholder="这里写 Chart 9 的说明…"></textarea>
+            <textarea id="note9" spellcheck="false">Before creating this figure, I asked GPT what the fastest approach would be. It gave me three options, and I chose to draw the SVG myself in Illustrator and then send it to GPT to add the fade-in and interactive effects. During the process, the interactions failed because the SVG wasn’t grouped, so I regrouped the elements. After four or five more rounds of tweaking the interactions with GPT, I completed the figure.</textarea>
           </div>
         </aside>
       </div>
@@ -148,7 +147,7 @@
         <aside class="note-col">
           <div class="note-card">
             <div class="note-title">备注（Chart 8）</div>
-            <textarea id="note8" spellcheck="false" placeholder="这里写 Chart 8 的说明…"></textarea>
+            <textarea id="note8" spellcheck="false">This was the easiest figure for me: after I sent GPT the assignment requirements and the reference image, it generated exactly what I needed on the first try.</textarea>
           </div>
         </aside>
       </div>
@@ -166,7 +165,7 @@
         <aside class="note-col">
           <div class="note-card">
             <div class="note-title">备注（Chart 11）</div>
-            <textarea id="note11" spellcheck="false" placeholder="这里写 Chart 11 的说明…"></textarea>
+            <textarea id="note11" spellcheck="false">For this figure, after I sent it to GPT and got the first output, the same issue as before appeared—the function’s peak value didn’t match what I needed. Even though I highlighted exactly which values were wrong, it still didn’t fix them. So I asked GPT why the peak was incorrect in the code; this time it corrected the mistake and explained how to resolve it. After another three or four rounds of back-and-forth, we finally produced the figure.</textarea>
           </div>
         </aside>
       </div>
@@ -184,7 +183,7 @@
         <aside class="note-col">
           <div class="note-card">
             <div class="note-title">备注（Chart 10）</div>
-            <textarea id="note10" spellcheck="false" placeholder="这里写 Chart 10 的说明…"></textarea>
+            <textarea id="note10" spellcheck="false">For this figure, after GPT produced the first version, it told me a map was needed. I asked GPT where to download the required file, then followed the link to download a map of Singapore and sent it to GPT. In the next output, I noticed the “x” symbol was missing, so I specified that I needed an “x” at the center of the circle. This time, it met my requirement well.</textarea>
           </div>
         </aside>
       </div>
